# Fujicom

./: Fuji.sln  Fujicom Setup.iss  Fujicom Test.js  LICENSE  README.md
DriverFolder/Fujicom/: Fujicom Setup.iss
Fuji/: ASCOM.ScdouglasFujifilm.exe.config  Fuji.csproj  LocalServer.cs  ReadMe.htm  app.config  frmMain.Designer.cs
Fuji/CameraConfigs/: GFX100S.json  X-T5.json
Fuji/CameraDriver/: CameraDriver.cs  CameraHardware..cs  CameraHardware.cs  SetupDialogForm.cs  SetupDialogForm.designer.cs
Fuji/DLL and Headers/: X-T3.json
Fuji/Driver/: DeviceCamera.cs  DeviceCoverCalibrator.cs  DeviceDome.cs  DeviceFilterWheel.cs  DeviceFocuser.cs  DeviceObservingConditions.cs  DeviceRotator.cs  DeviceSafetyMonitor.cs  DeviceSwitch.cs  DeviceTelescope.cs  DeviceVideo.cs  HardwareCamera.cs  HardwareCoverCalibrator.cs  HardwareDome.cs  HardwareFilterWheel.cs  HardwareFocuser.cs  HardwareRotator.cs  (+7 more)
LibRawWrapper/: AssemblyInfo.cpp  LibRawWrapper.cpp  LibRawWrapper.h  LibRawWrapper.sln  LibRawWrapper.vcxproj  LibRawWrapper.vcxproj.filters
Nightshade2/native/nightshade_native/indi/: Cargo.toml
Nightshade2/native/nightshade_native/indi/src/: autofocus.rs  camera.rs  client.rs  covercalibrator.rs  discovery.rs  dome.rs  error.rs  filterwheel.rs  focuser.rs  lib.rs  mount.rs  protocol.rs  rotator.rs  safetymonitor.rs
Nightshade2/native/nightshade_native/sequencer/: Cargo.toml
Nightshade2/native/nightshade_native/sequencer/src/: autofocus_instructions.rs  device_ops.rs  executor.rs  flat_wizard.rs  instructions.rs  node.rs  polar_align.rs  temperature_compensation.rs
(+120 files in other folders)
